[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/Idle 38.png" type="Texture" id=1]
[ext_resource path="res://scripts/main_scripts/reset.gd" type="Script" id=2]
[ext_resource path="res://assets/img/Idle 18.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Idle 27.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "hide_buttons"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("home:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 52 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("reset:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 26 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("home:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("reset:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("reset:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("home:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "show_buttons"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("home:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 52 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("reset:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 26 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("home:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("reset:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("home:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("reset:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="reset" type="Node2D"]
script = ExtResource( 2 )

[node name="home" type="Button" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 52.0
margin_right = 28.0
margin_bottom = 79.9998
disabled = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="home"]
position = Vector2( 14, 14 )
scale = Vector2( 1.33333, 1.27273 )
texture = ExtResource( 1 )

[node name="reset" type="Button" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 26.0
margin_right = 28.0
margin_bottom = 54.0
disabled = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="reset"]
position = Vector2( 14, 14 )
scale = Vector2( 1.33333, 1.27273 )
texture = ExtResource( 4 )

[node name="pause" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 28.0
margin_bottom = 28.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="pause"]
position = Vector2( 14, 14 )
scale = Vector2( 1.33333, 1.27273 )
texture = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/hide_buttons = SubResource( 1 )
anims/show_buttons = SubResource( 2 )
[connection signal="pressed" from="home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
